--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.292.0",
     "next": "14.0.1",
     "next-themes": "^0.2.1",
+    "openai": "^4.19.0",
+    "os": "^0.1.2",
     "react": "^18",
     "react-dom": "^18",
     "swr": "^2.2.4",
