--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "os": "^0.1.2",
     "react": "^18",
     "react-dom": "^18",
-    "swr": "^2.2.4",
+    "react-query": "^3.39.3",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7"
   },
